--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,27 +2,25 @@
 
 <h1>Listing Items</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>なまえ</th>
-      <th>Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-3">なまえ</div>
+    <div class="col-lg-3">Price</div>
+    <div class="col-lg-6"></div>
+  </div>
+</div>
 
-  <tbody>
-    <% @items.each do |item| %>
-      <tr>
-        <td><%= item.name %></td>
-        <td><%= item.price %></td>
-        <td><%= link_to 'Show', item %></td>
-        <td><%= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="container-fluid">
+  <% @items.each do |item| %>
+    <div class="row">
+      <div class="col-lg-3"><%= item.name %></div>
+      <div class="col-lg-3"><%= item.price %></div>
+      <div class="col-lg-2"><%= link_to 'Show', item %></div>
+      <div class="col-lg-2"><%= link_to 'Edit', edit_item_path(item) %></div>
+      <div class="col-lg-2"><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+    </div>
+  <% end %>
+</div>
 
 <br>
 
