--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,6 +70,10 @@
         <div class="col-lg-3">
           <div class="well sidebar-nav">
             <h3>Sidebar</h3>
+            <%= form_for Tweet.new user: current_user do |f| %>
+              <%= f.text_area :body %>
+              <%= f.submit %>
+            <% end %>
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
               <li><%= link_to "Link1", "/path1"  %></li>
