ADd tmp follow botton

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,14 @@
+<div class="container-fluid">
 <% @users.each do |user| %>
-  <%= user.email %>
+  <div class="row">
+    <div class="col-lg-8"><%= user.email %></div>
+    <div class="col-lg-4">
+      <% if user == current_user %>
+        それはあなたです
+      <% else %>
+        フォローするボタン
+      <% end %>
+    </div>
+  </div>
 <% end %>
+</div>
