--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,14 @@
       <% if user == current_user %>
         それはあなたです
       <% else %>
-        フォローするボタン
+        <% if current_user.following_users.include? user %>
+          フォロー済み
+        <% else %>
+          <%= form_for Following.new do |f| %>
+            <%= f.hidden_field :to_user_id, value: user.id.to_s %>
+            <%= f.submit %>
+          <% end %>
+        <% end %>
       <% end %>
     </div>
   </div>
