--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Timelines#index</h1>
-<p>Find me in app/views/timelines/index.html.erb</p>
+<h1>Timelines</h1>
+
+<div class="container-fluid">
+  <% @tweets.each do |tweet| %>
+    <div class="row">
+      <%= tweet.body %>
+      <%= tweet.user.email %>
+    </div>
+  <% end %>
+</div>
