Show posted_at and order by posted_at in timeline

--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -5,6 +5,7 @@
     <div class="row">
       <%= tweet.body %>
       <%= tweet.user.email %>
+      <%= tweet.posted_at.strftime('%Y/%m/%d %H:%M:%S') %>
     </div>
   <% end %>
 </div>
