--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,9 +70,11 @@
         <div class="col-lg-3">
           <div class="well sidebar-nav">
             <h3>Sidebar</h3>
-            <%= form_for Tweet.new user: current_user do |f| %>
-              <%= f.text_area :body %>
-              <%= f.submit %>
+            <% if user_signed_in? %>
+              <%= form_for Tweet.new user: current_user do |f| %>
+                <%= f.text_area :body %>
+                <%= f.submit %>
+              <% end %>
             <% end %>
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
