--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,16 +48,17 @@
         <a class="navbar-brand" href="#">Twcopy</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to 'ユーザー一覧', users_path  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <li><%= link_to 'タイムライン', timelines_path %></li>
+            <li><%= link_to 'ユーザー一覧', users_path %></li>
           </ul>
+          <div class="nav navbar-nav navbar-right">
+            <% if user_signed_in? %>
+                Hello <%= current_user.email %>, <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'btn btn-primary navbar-btn' %>
+            <% else %>
+                you are not signing in. <%= link_to 'Sing in', new_user_session_path, class: 'btn btn-primary navbar-btn' %>
+            <% end %>
+          </div>
         </div>
-        <% if user_signed_in? %>
-          Hello <%= current_user.email %>, <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
-        <% else %>
-          you are not signing in. <%= link_to 'Sing in', new_user_session_path %>
-        <% end %>
       </div>
     </div>
 
@@ -69,19 +70,14 @@
         </div>
         <div class="col-lg-3">
           <div class="well sidebar-nav">
-            <h3>Sidebar</h3>
             <% if user_signed_in? %>
-              <%= form_for Tweet.new user: current_user do |f| %>
-                <%= f.text_area :body %>
-                <%= f.submit %>
-              <% end %>
+                <diev class="row form-group">
+                  <%= form_for Tweet.new user: current_user do |f| %>
+                      <%= f.text_area :body, placeholder: 'いまどうしてる？', class: 'form-control' %>
+                      <%= f.submit 'ツイート', class: 'btn btn-danger' %>
+                  <% end %>
+                </diev>
             <% end %>
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to 'ユーザー一覧', users_path  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
           </div><!--/.well -->
         </div><!--/span-->
       </div><!--/row-->
